--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#8257E5" />
+  <meta name="theme-color" content="#1b263b" />
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&family=Poppins&display=swap"
     rel="stylesheet">
-  <title>Proffy</title>
+  <title>Consulty</title>
 </head>
 
 <body>
